--- a/README
+++ b/README
@@ -15,6 +15,17 @@ Create a directory for your oe-core setup to live in and clone the meta informat
 
   mkdir oe-core
   cd oe-core
-  repo init -u file:///home/trdx/oe-disk/repo -b VF50_LinuxImageV2.1
+  repo init -u http://git.toradex.com/toradex-bsp-platform -b master
   repo sync
 
+Create a development branch in all git repositories
+
+  repo start mybranch --all
+
+
+
+Source the file export to setup the environment. On first invocation this
+also copies a sample configuration to build/conf/*.conf. Adapt local.conf to
+your needs.
+
+  . export
