README: add comment for generation of default.xml
Change-Id: Idcebc033f1118967bd84f419eb16c6d0bf1fec54

--- a/README
+++ b/README
@@ -49,3 +49,7 @@ and then if you want to build for Apalis T30 instead, use the following command 
 More information on our developer website:
 
   http://developer.toradex.com/software-resources/arm-family/linux/board-support-package/openembedded-(core)
+
+For Toradex use:
+To generate a manifest from what is currently checked out:
+repo manifest -r -o manifest.xml
