README: updated available machines
Change-Id: I4a91d2163544a0ca321e267009a136262a4e2167
Signed-off-by: Max Krummenacher <max.krummenacher@toradex.com>

--- a/README
+++ b/README
@@ -33,7 +33,9 @@ one override it from the command line.
 
 For Toradex modules the following machines exist:
 
+  apalis-imx6
   apalis-t30
+  colibri-imx6
   colibri-t20
   colibri-t30
   colibri-vf50
