--- a/README
+++ b/README
@@ -36,6 +36,7 @@ For Toradex modules the following machines exist:
   apalis-imx6
   apalis-t30
   colibri-imx6
+  colibri-imx7
   colibri-t20
   colibri-t30
   colibri-vf50
